# cloud-func-base

./: .gitignore  build.sh  crud.py  main.py  pyproject.toml
lib/: db.py
schemas/: event.py  req_context.py  response.py
