[tool.poetry]
name = "ydb-test-cf"
version = "0.1.0"
description = ""
authors = ["gglamer <azamat201760@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ydb = "^3.4.0"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
